# vulkan-learning

./: CMakeLists.txt  README.md  notes.txt
01-initialisation/: CMakeLists.txt  main.cpp
02-create-logical-device/: CMakeLists.txt  main.cpp
03-device-queues/: CMakeLists.txt  main.cpp
04-restructure/: CMakeLists.txt  main.cpp
04-restructure/util/: simplebuffer.cpp
05-images/: CMakeLists.txt  main.cpp
05-images/util/: registrar.cpp  registrar.h
06-restructure/: CMakeLists.txt  main.cpp  vulkanapp.cpp  vulkanapp.h
06-restructure/util/: deviceinstance.cpp  deviceinstance.h  graphicspipeline.cpp  graphicspipeline.h  registrar.cpp  registrar.h  simplebuffer.h  util.cpp  util.h  windowintegration.cpp  windowintegration.h
engine/: CMakeLists.txt  camera.cpp  camera.h  engine.cpp  engine.h  event.cpp  event.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  vertex.h
engine/loaders/: gltfloader.cpp  gltfloader.h
loaders/: CMakeLists.txt  gltfloader.cpp  gltfloader.h
models/blender-cube/: blender-cube.blend
models/blender-cube-withlights/: cube-withlights.blend  cube-withlights.blend1  cube-withlights.glb  cube-withlights.gltf
nodegraph/: CMakeLists.txt  lightnode.cpp  lightnode.h  meshnode.cpp  meshnode.h  node.cpp  node.h
renderer/: CMakeLists.txt  common.vert  flatshading.frag  flatshading.vert  renderer.cpp  renderer.h
renderer/shaders/: flatshading.frag  interface_uniforms.inc  mesh.vert  phongish.frag
tests/: CMakeLists.txt
tests/engine-basic/: CMakeLists.txt  main.cpp
tests/physics/: CMakeLists.txt  main.cpp  physics.cpp  physics.h  test.comp  test.frag  test.vert  vulkanapp.cpp  vulkanapp.h
tests/pipeline-specialisation-constants/: CMakeLists.txt  vulkanapp.cpp
tests/renderer-basic/: CMakeLists.txt  main.cpp
tests/triangle/: CMakeLists.txt  main.cpp  test.frag  test.vert  vulkanapp.cpp  vulkanapp.h
vulkanutils/: CMakeLists.txt
vulkanutils/util/: computepipeline.cpp  computepipeline.h  deviceinstance.cpp  deviceinstance.h  framebuffer.cpp  framebuffer.h  graphicspipeline.cpp  graphicspipeline.h  registrar.h  simplebuffer.cpp  simplebuffer.h  simpleimage.cpp  simpleimage.h  util.cpp  util.h  windowintegration.cpp  windowintegration.h
vulkanutils/util/pipelines/: computepipeline.cpp  computepipeline.h  graphicspipeline.cpp  graphicspipeline.h  pipeline.cpp  pipeline.h
